kustomize/open-webui/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/upstream-keepalive-connections: "512"
    nginx.ingress.kubernetes.io/upstream-keepalive-requests: "1000"
    nginx.ingress.kubernetes.io/upstream-keepalive-timeout: "600"
    nginx.ingress.kubernetes.io/worker-connections: "4096"
    nginx.ingress.kubernetes.io/keep-alive-requests: "1000"
    nginx.ingress.kubernetes.io/upstream-keepalive-requests: "1000"
    # Enable sticky sessions to ensure users stay connected to the same backend pod
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "OWUI_ROUTE"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    # Uncomment to issue TLS certificates via cert-manager:
    # cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: samwise.library.ucdavis.edu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-webui
                port:
                  number: 8080
  # Uncomment to enable TLS:
  tls:
    - hosts:
        - samwise.library.ucdavis.edu
      secretName: open-webui-tls
